--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,17 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2024.3.2.1"
+robotpy_version = "2025.2.1.0"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
 robotpy_extras = [
     # "all"
-    "apriltag",
-    # "commands2",
+    # "apriltag",
+    "commands2",
     # "cscore",
-    "navx",
-    # "pathplannerlib",
+    # "navx",
+    "pathplannerlib",
     "phoenix5",
     "phoenix6",
     # "playingwithfusion",
@@ -27,4 +27,6 @@ robotpy_extras = [
 ]
 
 # Other pip packages to install
-requires = []
+requires = [
+    "limelightlib-python",
+]
