--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2024.3.2.1"
+robotpy_version = "2025.2.1.2"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
 robotpy_extras = [
     # "all"
-    "apriltag",
+    # "apriltag",
     # "commands2",
     # "cscore",
-    "navx",
+    # "navx",
     # "pathplannerlib",
-    "phoenix5",
+    # "phoenix5",
     "phoenix6",
     # "playingwithfusion",
     # "rev"
