changed test mode

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@
 # on your RoboRIO
 #
 
-[tool.robotpy]
+[tool.robotpy.pyfrc]
+isolated = true
 
 # Version of robotpy this project depends on
 robotpy_version = "2025.3.1.1"
