--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2025.3.1.0"
+robotpy_version = "2025.3.1.1"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
@@ -20,7 +20,7 @@ robotpy_extras = [
     "phoenix5",
     "phoenix6",
     # "playingwithfusion",
-    # "rev"
+    "rev",
     # "romi",
     # "sim",
     # "xrp",
