--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@
 # on your RoboRIO
 #
 
-#[tool.robotpy.pyfrc]
-#isolated = true
-[tool.robotpy]
+[tool.robotpy.pyfrc]
+isolated = true
+#[tool.robotpy]
 
 # Version of robotpy this project depends on
 robotpy_version = "2025.3.1.1"
@@ -30,5 +30,6 @@ robotpy_extras = [
 
 # Other pip packages to install
 requires = [
-    "shapely==2.0.7"
+    "pygeoif",
+    "pyclipper"
 ]
