--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ robotpy_extras = [
     "apriltag",
     # "commands2",
     # "cscore",
-    "navx",
+    # "navx",
     # "pathplannerlib",
     "phoenix5",
     "phoenix6",
@@ -27,4 +27,4 @@ robotpy_extras = [
 ]
 
 # Other pip packages to install
-requires = []
+requires = ["pynetworktables"]
