I'm not exactly sure what happened but the modules are messed up and I want to save my code :((((

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2025.2.1.2"
+robotpy_version = "2025.3.2.2"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
@@ -16,15 +16,16 @@ robotpy_extras = [
     # "commands2",
     # "cscore",
     # "navx",
-    # "pathplannerlib",
+    "pathplannerlib",
     # "phoenix5",
     "phoenix6",
     # "playingwithfusion",
-    # "rev"
+    "rev"
     # "romi",
     # "sim",
     # "xrp",
 ]
 
 # Other pip packages to install
-requires = []
+requires = [ "pynetworktables"
+]
